# kamecv

./: .gitignore  CMakeLists.txt  DESIGN.md  NOTE.md  README.md  main_figure_experiment.cpp  main_signal_experiment.cpp
Communicator/include/: communicator.h
Game/: CMakeLists.txt  game_comm.cpp
PointShape/: CMakeLists.txt  README.md  morph_main.cpp
PointShape/include/: binary_image.hpp  bitmap.h  fft.h  filter_gaussian.h  morphology.h  noise.h  one_bit_tiff.h
PointShape/src/: binary_image.cpp  morphology.cpp  one_bit_tiff.cpp
PointShape/test/: CMakeLists.txt  morphology.cpp
cellular_automaton/: CMakeLists.txt
cellular_automaton/include/: pattern_sample.h
cellular_automaton/test/: binary_image.cpp  noise.cpp  opencv.cpp  wave_fft.cpp
docs/CellularAutomaton/: celluer_automaton.tex
glsl_sample/: binary.frag  hash.frag  hello.frag  lerp.frag  lerp_1dm_3pt.frag  lerp_2dim.frag  polar.frag  polar_rot.frag  posterization.frag  random_legacy.frag  vnoise.frag
math/: CMakeLists.txt  README.md  animate_heapsort.cpp  bayse_opt.cpp  template_main.cpp
math/include/: chat_gpt.h  random_bit.h  robot.h  sort.h  stochastic_model.h  tpt.h  tridiagonal.h  uniform_random.h
math/src/: random_bit.cpp  robot.cpp  sort.cpp  tpt.cpp  uniform_random.cpp
math/test/: CMakeLists.txt  random_bit.cpp  robot.cpp  sort.cpp  template.cpp  tpt.cpp  tridiagonal.cpp  uniform_random.cpp
opencv_sample/: fruits.jpg:Zone.Identifier  fruits.jpgZone.Identifier  home.jpg:Zone.Identifier  home.jpgZone.Identifier  lena.jpg:Zone.Identifier  lena.jpgZone.Identifier
opencv_tools/: CMakeLists.txt  cellular_automaton_main.cpp
opencv_tools/include/: binary_image.h  matplotlibcpp.h  noise.h  pattern_sample.h  stb_image_write.h  template.h
opencv_tools/src/: binary_image.cpp  template.cpp
opencv_tools/test/: CMakeLists.txt  binary_image.cpp  matplotlibcpp_sample.cpp  noise.cpp  opencv.cpp  template.cpp  wave_fft.cpp
service/: CMakeLists.txt
service/include/: figure_experiment.h  opencv_morphology.h  signal_experiment.h
service/src/: figure_experiment.cpp  signal_experiment.cpp
